--- a/index.html
+++ b/index.html
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>创美服务</title>
+    <meta charset="utf-8">
+    <title>轻量化云管理</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/pc.css">
 </head>
 
 <body>
-    <h1>欢迎来到创美</h1>
+    <div class="loginBox">
+        <div class="form sign-in">
+            <h2>欢迎使用轻量化云管理</h2>
+            <label style="margin-top: 40px;">
+                <span>用户名</span>
+                <input type="email" />
+            </label>
+            <label>
+                <span>密码</span>
+                <input type="password" />
+            </label>
+            <p class="forgot-pass"><a href="javascript:">忘记密码？</a></p>
+            <button type="button" class="submit" onclick="window.location.href = 'index.html'">登 录</button>
+            <!-- <button type="button" class="fb-btn">使用 <span>微信</span> 登录</button> -->
+        </div>
+        <div class="sub-cont">
+            <div class="img">
+                <div class="img__text m--up">
+                    <h2>这里有微信</h2>
+                    <p>立即使用，发现大量机会！</p>
+                </div>
+                <div class="img__text m--in">
+                    <h2>已有帐号</h2>
+                    <p>有帐号就登录吧，好久不见了！</p>
+                </div>
+                <div class="img__btn">
+                    <span class="m--up">扫码登录</span>
+                    <span class="m--in">账号登录</span>
+                </div>
+            </div>
+            <div class="form sign-up">
+                <h2>扫码登录</h2>
+                <div class="qcodeBox">
+                    二维码
+                </div>
+
+                <button type="button" class="submit">登录</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
