--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>轻量化云管理</title>
+    <title>醉美樱花</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/pc.css">
 </head>
@@ -11,7 +11,7 @@
 <body>
     <div class="loginBox">
         <div class="form sign-in">
-            <h2>欢迎使用轻量化云管理</h2>
+            <h2>欢迎来到醉美龙山</h2>
             <label style="margin-top: 40px;">
                 <span>用户名</span>
                 <input type="email" />
