--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>醉美樱花</title>
+    <title>醉美学习--登录</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/pc.css">
 </head>
@@ -21,7 +21,7 @@
                 <input type="password" />
             </label>
             <p class="forgot-pass"><a href="javascript:">忘记密码？</a></p>
-            <button type="button" class="submit" onclick="window.location.href = 'index.html'">登 录</button>
+            <button type="button" class="submit" onclick="window.location.href = 'photo.html'">登 录</button>
             <!-- <button type="button" class="fb-btn">使用 <span>微信</span> 登录</button> -->
         </div>
         <div class="sub-cont">
