--- a/photo.html
+++ b/photo.html
@@ -14,7 +14,8 @@
 
 <body>
     <header class="header">
-        <nav>
+        <nav class="navBox">
+            <h1 class="logotitle">看樱花-来龙山</h1>
             <ul class="nav">
                 <li class="on">首页</li>
                 <li>樱花</li>
