--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
             <a href="index.html"><img src="imgs/logo_v2.png" style="width:200px;height:46px" alt="Logo"></a> <!-- site logo -->                  
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="http://www.psmirror.cn/zh" class="smooth-scroll">首页</a></li>
-            <li><a href="http://www.psmirror.cn/zh/install" class="smooth-scroll">流程</a></li>
-            <li><a href="http://www.psmirror.cn/zh/usage" class="smooth-scroll">使用</a></li>
-            <li><a href="http://www.psmirror.cn/zh/purchase" class="smooth-scroll">购买</a></li>
-            <li><a href="http://www.psmirror.cn/zh/help" class="smooth-scroll">帮助</a></li>
-            <li><a href="http://www.psmirror.cn/zh/login" class="smooth-scroll">联系我们</a></li>
+            <li><a href="javascript:;" class="smooth-scroll">首页</a></li>
+            <li><a href="javascript:;" class="smooth-scroll">流程</a></li>
+            <li><a href="javascript:;" class="smooth-scroll">使用</a></li>
+            <li><a href="javascript:;" class="smooth-scroll">购买</a></li>
+            <li><a href="javascript:;" class="smooth-scroll">帮助</a></li>
+            <li><a href="javascript:;" class="smooth-scroll">联系我们</a></li>
         </ul>
     </div>
     <!-- .container end -->
@@ -67,12 +67,12 @@
     <nav class="nav-menu-mobile">
         <div class="nav-menu-links">
             <ul>
-                <li><a href="http://www.psmirror.cn/zh" class="smooth-scroll">首页</a></li>
-                <li><a href="http://www.psmirror.cn/zh/install" class="smooth-scroll">流程</a></li>
-                <li><a href="http://www.psmirror.cn/zh/usage" class="smooth-scroll">使用</a></li>
-                <li><a href="http://www.psmirror.cn/zh/purchase" class="smooth-scroll">购买</a></li>
-                <li><a href="http://www.psmirror.cn/zh/help" class="smooth-scroll">帮助</a></li>
-                <li><a href="http://www.psmirror.cn/zh/login" class="smooth-scroll">联系我们</a></li>
+                <li><a href="index.html" class="smooth-scroll">首页</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">流程</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">使用</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">购买</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">帮助</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">联系我们</a></li>
             </ul>
         </div>
         <div class="nav-menu-button">
@@ -86,17 +86,17 @@
         <div class="container">
 
             <div class="navbar-brand">
-                <a href="http://www.psmirror.cn/zh">
+                <a href="index.html">
                     <img src="imgs/logo_v2.png" style="width:200px;height:46px" alt="Logo"></a> <!-- site logo -->             
             </div>
 
             <ul class="nav navbar-nav">
-                <li><a href="http://www.psmirror.cn/zh" class="smooth-scroll">首页</a></li>
-                <li><a href="http://www.psmirror.cn/zh/install" class="smooth-scroll">流程</a></li>
-                <li><a href="http://www.psmirror.cn/zh/usage" class="smooth-scroll">使用</a></li>
-                <li><a href="http://www.psmirror.cn/zh/purchase" class="smooth-scroll">购买</a></li>
-                <li><a href="http://www.psmirror.cn/zh/help" class="smooth-scroll">帮助</a></li>
-                <li><a href="http://www.psmirror.cn/zh/login" class="smooth-scroll">联系我们</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">首页</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">流程</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">使用</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">购买</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">帮助</a></li>
+                <li><a href="javascript:;" class="smooth-scroll">联系我们</a></li>
             </ul>
 
         </div>
@@ -114,7 +114,7 @@
                     <h1 class="tk-source-han-sans-simplified-c">您身边的图片处理助手</h1>
                 </div>
                 <div class="header-button">
-                    <a href="http://www.psmirror.cn/zh/install" class="btn-header smooth-scroll"><i class="fa fa-download"></i> 立即联系</a>
+                    <a href="javascript:;" class="btn-header smooth-scroll"><i class="fa fa-download"></i> 立即联系</a>
                 </div>
             </div>
 
