--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h1 class="tk-source-han-sans-simplified-c">您身边的图片处理助手</h1>
                 </div>
                 <div class="header-button">
-                    <a href="javascript:;" class="btn-header smooth-scroll"><i class="fa fa-download"></i> 立即联系</a>
+                    <a href="javascript:;" class="btn-header smooth-scroll"><i class="fa fa-phone"></i> 立即联系</a>
                 </div>
             </div>
 
