--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="iMunch|图片快速处理|裁切大小|质量压缩|背景替换|快速抠章|批量处理|模型展示|水印去除|签名签章处理">
     <meta name="author" content="Hongjie">
     <meta name="baidu-site-verification" content="您身边的图片处理助手">
-    <link rel="shortcut icon" href="http://www.psmirror.cn/images/favicon.ico">
+    <link rel="shortcut icon" href="imgs/favicon.ico">
     <title> iMunch-图片快速处理 </title>
 
     <!-- Fonts -->
@@ -64,7 +64,7 @@
     <!-- .container end -->
 </nav>
 <header id="header" style="opacity: 1;">
-    <nav class="nav-menu-mobile">
+    <nav class="nav-menu-mobile" style="display: none!important">
         <div class="nav-menu-links">
             <ul>
                 <li><a href="index.html" class="smooth-scroll">首页</a></li>
@@ -80,7 +80,7 @@
         </div>
     </nav>
     <!-- #navigation -->
-    <nav id="navigation" class="navbar">
+    <nav id="navigation" class="navbar" >
 
         <!-- .container -->
         <div class="container">
