--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li><a href="javascript:;" class="smooth-scroll">使用</a></li>
             <li><a href="javascript:;" class="smooth-scroll">购买</a></li>
             <li><a href="javascript:;" class="smooth-scroll">帮助</a></li>
-            <li><a href="javascript:;" class="smooth-scroll">联系我们</a></li>
+            <li><a href="select.html" class="smooth-scroll">联系我们1</a></li>
         </ul>
     </div>
     <!-- .container end -->
@@ -99,7 +99,8 @@
                 <li><a href="javascript:;" class="smooth-scroll">使用</a></li>
                 <li><a href="javascript:;" class="smooth-scroll">购买</a></li>
                 <li><a href="javascript:;" class="smooth-scroll">帮助</a></li>
-                <li><a href="javascript:;" class="smooth-scroll">联系我们</a></li>
+                <!-- <li><a href="javascript:;" class="smooth-scroll">联系我们</a></li> -->
+                <li><a href="select.html" class="smooth-scroll">联系我们1</a></li>
             </ul>
 
         </div>
