--- a/select.html
+++ b/select.html
@@ -17,7 +17,7 @@
           <el-select 
             v-model="value" 
             filterable 
-            placeholder="请选择"
+            placeholder="请选择2"
             ref="select"
             @focus="closeReadOnly" @blur="closeReadOnly">
             <el-option
