--- a/demo/m_index.html
+++ b/demo/m_index.html
@@ -42,7 +42,7 @@
             </a>
         </div>
         <div class="m_nav_box">
-            <a href="phone_workport.html">
+            <a href="m_workdesc.html">
                 <div class="m_nav_item">
                     <img src="img/phone/m_gzhb.png" alt="" class="m_large_icon" />
                     <span class="m_nav_text">查看汇报</span>
