--- a/demo/m_index.html
+++ b/demo/m_index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="app">
         <div class="m_bar_header">
-            <span class="fl_icon_fl"><a href="phone_index.html"> <i class="el-icon-arrow-left ml-1"></i> 退出</a></span>
+            <span class="fl_icon_fl"><a href="m_login.html"> <i class="el-icon-arrow-left ml-1"></i> 退出</a></span>
             <span class="tetie">CRM系统</span>
             <span class="fl_icon_fr"> <span class="ml-2"> </span> </span>
         </div>
@@ -28,13 +28,13 @@
         </div>
         <!-- 首页导航 -->
         <div class="m_nav_box">
-            <a href="phone_workport.html">
+            <a href="m_workport.html">
                 <div class="m_nav_item">
                     <img src="img/phone/m_gzhb.png" alt="" class="m_large_icon" />
                     <span class="m_nav_text">填写汇报</span>
                 </div>
             </a>
-            <a href="">
+            <a href="m_corp.html">
                 <div class="m_nav_item">
                     <img src="img/phone/m_xsht.png" alt="" class="m_large_icon" />
                     <span class="m_nav_text">销售合同</span>
