--- a/demo/m_company.html
+++ b/demo/m_company.html
@@ -7,21 +7,19 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>合同信息</title>
   <link rel="stylesheet" type="text/css" href="css/mcss.css">
+  <link rel="stylesheet" href="css/reset.css">
   <!-- 引入样式 -->
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-  <!-- 引入组件库 -->
-  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/phone.css">
+  
 </head>
 
 <body>
   <div id="app">
-    <!-- 头部 -->
-    <div class="corp_Part_head">
-      <div class="fl">
-        <i class="el-icon-arrow-left icon_set" title="返回" onclick="window.location.href='m_workdesc.html'"></i>
-        <span class="labelUname2" onclick="window.location.href='m_workdesc.html'">返回</span>
-      </div>
-      <!-- <div class="fr labelUname">孙工</div> -->
+    <div class="m_bar_header">
+      <span class="fl_icon_fl"><a href="m_workdesc.html"> <i class="el-icon-arrow-left ml-1"></i> 返回</a></span>
+      <span class="tetie"></span>
+      <span class="fl_icon_fr"></span>
     </div>
     <!-- tab -->
     <div class="corp_Part_tab">
@@ -130,9 +128,9 @@
 
 </html>
 <!-- import Vue before Element -->
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
+<script src="js/vue.js"></script>
 <!-- import JavaScript -->
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+<script src="js/index.js"></script>
 <script>
   new Vue({
     el: '#app',
