--- a/demo/m_corpdesc.html
+++ b/demo/m_corpdesc.html
@@ -6,9 +6,10 @@
 	<title>合同信息</title>
   <link rel="stylesheet" type="text/css" href="css/mcss.css">
   <!-- 引入样式 -->
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <link rel="stylesheet" href="css/index.css">
   <!-- 引入组件库 -->
-  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <script src="js/index.js"></script>
+  
 </head>
 <body>
   <div id="app">
@@ -109,9 +110,9 @@
 </body>
 </html>
 <!-- import Vue before Element -->
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
+<script src="js/vue.js"></script>
 <!-- import JavaScript -->
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+<script src="js/index.js"></script>
 <script>
   new Vue({
     el: '#app',
