--- a/demo/m_workport.html
+++ b/demo/m_workport.html
@@ -13,7 +13,7 @@
 <body>
     <div id="app">
         <div class="m_bar_header">
-            <span class="fl_icon_fl"><a href="phone_index"> <i class="el-icon-arrow-left ml-1"></i> 返回</a></span>
+            <span class="fl_icon_fl"><a href="m_index.html"> <i class="el-icon-arrow-left ml-1"></i> 返回</a></span>
             <span class="tetie">填写工作汇报</span>
             <span class="fl_icon_fr"> <i class="el-icon-finished "></i> <span class="ml-2">提交 </span> </span>
         </div>
