--- a/demo/m_workdesc.html
+++ b/demo/m_workdesc.html
@@ -25,13 +25,18 @@
     </div>
     <!-- 查询 -->
     <div class="corp_Part_search" style="margin-top: 6vh;">
-      <el-input placeholder="关键词搜索" v-model="searchKey" class="input-with-select self_input mlr-10" size="small">
+      <!-- <el-input placeholder="关键词搜索" v-model="searchKey" class="input-with-select self_input mlr-10" size="small">
         <el-button slot="append" icon="el-icon-search"  ></el-button>
-      </el-input>
+      </el-input> -->
+      <van-search v-model="searchKey" shape="round" style="width: 100%;"
+      background="#e4e4e4" placeholder="请输入搜索关键词"></van-search>
     </div>
     <!-- 表格 -->
-    <div class="corp_Part_table"  style="height: 89vh;">
+    <div class="corp_Part_table"  style="height: 88vh;">
       <div class="m_part_Box" v-for="(item,index)  in workList" :key="index">
+        <div class="div_riqi">
+          <span>03/25</span>
+        </div>
         <div class="m_part_header">
           <div class="m_part_h_l">
             <span class="m_work_worker">{{item.worker}}</span>
@@ -56,7 +61,7 @@
         </div>
         <div class="m_part_content">
           <div class="m_info_1">
-            <div class="m_calenerBox">
+            <div class="m_calenerBox" v-if="false">
               <div class="m_calener">
                 <div class="m_calener_year" v-text="item.workdate.slice(0,4)"></div>
                 <div class="m_calener_dayBox">
@@ -77,10 +82,14 @@
           </div>
           <div v-if="item.clildworkList.length>0">
             <div class="m_info_1" v-for="(v,i)  in item.clildworkList">
-              <div class="m_list_workBox">
+              <div class="m_list_workBox" v-if="false">
                 <span class="m_zuijia">追加</span>
                 <span class="m_work_time" v-text="v.chi_work_date.slice(0,9)">2021-03-05</span>
                 <span class="m_work_time" v-text="v.chi_work_date.slice(10,18)">08:30:41</span>
+              </div>
+              <div class="m_infolabel">
+                <span class="m_zuijia">追加</span>
+                <span class="m_work_time" v-text="v.chi_work_date"></span>
               </div>
               <div class="worktext">
                 <div :class="isShowall?'m-height':'' ">
