--- a/designer/dhj/index.html
+++ b/designer/dhj/index.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="static/css/super-classes.css">
       <link rel="stylesheet" href="static/css/style.css">
       <link rel="stylesheet" href="static/css/mobile.css">
-      <title>Folio flix | Home</title>
+      <title>设计师 | 邓鸿杰</title>
    </head>
    <body>
       <!---header-and-banner-section-->
@@ -82,10 +82,10 @@
                               <div class="banner-heading">
                                  <h2>Hello, I Am</h2>                                 
                                  <ul class="dynamic-txts">
-                                    <li><h1>范例福民</h1></li>
-                                    <li><h1>范例福民</h1></li>
-                                    <li><h1>范例福民</h1></li>
-                                    <li><h1>范例福民</h1></li>
+                                    <li><h1>邓鸿杰</h1></li>
+                                    <li><h1>邓鸿杰</h1></li>
+                                    <li><h1>邓鸿杰</h1></li>
+                                    <li><h1>邓鸿杰</h1></li>
                                   </ul>
                                  <p>每个人的一生都有许多梦想，但如果其中一个不断搅扰着你<br>
                                     剩下的就仅仅是行动了
