--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Hongjie">
     <meta name="baidu-site-verification" content="您身边的图片处理助手">
     <link rel="shortcut icon" href="imgs/favicon.ico">
-    <title> iMunch-图片快速处理 </title>
+    <title> 你的世界 </title>
 
     <!-- Fonts -->
     
