--- a/website/cattool/index.html
+++ b/website/cattool/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./static/css/fonts/iconfont.css">
     <link rel="stylesheet" href="./static/css/iconfonts/iconfont.css">
     <link href="./static/css/help.css" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" href="imgs/favicon.ico">
 </head>
 
 <body>
@@ -232,7 +233,7 @@
                     </div>
                     
                 </el-tab-pane>
-                <el-tab-pane label="编程工具" name="7">
+                <el-tab-pane label="编程工具" name="8">
                     <div class="navbody-box">
                         <el-scrollbar  class="noscoll">
                             <div class="nav_tab_body" v-for="(navs,index) in devlists" :key="index">
