探索者软件

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="keywords" content="iMunch|图片快速处理|裁切大小|质量压缩|背景替换|快速抠章|批量处理|模型展示|水印去除|签名签章处理">
     <meta name="author" content="Hongjie">
     <meta name="baidu-site-verification" content="您身边的图片处理助手">
-    <link rel="shortcut icon" href="imgs/favicon.ico">
-    <title> 你的世界 </title>
+    <!-- <link rel="shortcut icon" href="imgs/favicon.ico"> -->
+    <title> 邓鸿杰-设计空间 </title>
 
     <!-- Fonts -->
     
